[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fist"
version = "2.0.0"
description = "a fast, intuitive and sensitive test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-multipart",
    "jinja2",
    "mistune",
    "redis",
    "celery",
    "prometheus-client",
    "psutil",
    "transformers",
    "torch",
    "spacy",
    "textblob",
    "vadersentiment",
    "scikit-learn",
    "nltk",
    "jieba",
    "langdetect",
    "beautifulsoup4",
    "lxml",
    "python-docx",
    "python-pptx",
    "PyPDF2",
    "pytesseract",
    "Pillow",
    "opencv-python",
    "sentence-transformers",
    "faiss-cpu",
    "qdrant-client",
]

[tool.setuptools]
packages = ["ai", "api", "core", "routes", "client_libraries"]