[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fist"
version = "2.0.0"
description = "a fast, intuitive and sensitive test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core API dependencies
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.20.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt==4.0.1",

    # HTTP & Data Processing
    "requests>=2.28.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.0.0",
    "mistune>=2.0.0",

    # Cache & Queue
    "redis>=4.0.0",
    "celery>=5.0.0",

    # Monitoring
    "prometheus-client>=0.14.0",
    "psutil>=5.8.0",

    # AI & ML Core
    "openai>=1.0.0",
    "transformers>=4.20.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",

    # NLP Libraries
    "spacy>=3.4.0",
    "textblob>=0.17.0",
    "vadersentiment>=3.3.0",
    "scikit-learn>=1.1.0",
    "nltk>=3.7.0",
    "jieba>=0.42.0",
    "langdetect>=1.0.9",

    # Document Processing
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",

    # Vector Search
    "faiss-cpu>=1.7.0",
    "qdrant-client>=1.0.0",
]

[tool.setuptools]
packages = ["ai", "core", "routes", "utils"]